# udemy_ros2

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
action/: Navigate2D.action
launch/: rm_node.launch.py  speed_project.launch.py
log/: latest_list
scripts/: publisher.py  subscriber.py
srv/: OddEvenCheck.srv
udemy_ros2_pkg/: action_client.py  action_server.py  calculate_robot_speed.py  measure_wheel_speed.py  publisher.py  service_client.py  service_server.py  subscriber.py
