<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udemy_ros2_pkg</name>
  <version>0.0.0</version>
  <description>Corresponding code for the Udemy ROS2 with Python course</description>
  <maintainer email="xdgfx@todo.todo">callum</maintainer>
  <license>None</license>


  <!-- EXECUTION DEPENDENCIES -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- TEST DEPENDENCIES -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
